@@ -570,6 +570,13 @@ publish status, rather than no stories at all (Bug #1). [David]
 Alert type rules can once again be deleted from the UI. Thanks to Scott for
 the report (Bug #81). [David]
 
+=item *
+
+Added the C<sql_type> element to the export of field types from SOAP. This
+prevents the SOAP server from having to guess the SQL type of a field type
+when updating an element type. Thanks to David Oliveira for the report (Bug
+#79). [David]
+
 =back
 
 =head1 Version 1.11.1 (2008-10-03)
